--- a/proposal/Proposal.Rmd
+++ b/proposal/Proposal.Rmd
@@ -81,6 +81,34 @@ atp2013 <- read_csv("files/atp2013.csv")
 atp2012 <- read_csv("files/atp2012.csv")
 atp2011 <- read_csv("files/atp2011.csv")
 atp2010 <- read_csv("files/atp2010.csv")
+
+winners2016 <- atp2016 %>%
+  filter(tourney_date < 20161114) %>%
+  filter(round == "F")
+
+winners2015 <- atp2015 %>%
+  filter(tourney_date < 20151115) %>%
+  filter(round == "F")
+
+winners2014 <- atp2014 %>%
+  filter(tourney_date < 20141109) %>%
+  filter(round == "F")
+
+winners2013 <- atp2013 %>%
+  filter(tourney_date < 20131104) %>%
+  filter(round == "F")
+
+winners2012 <- atp2012 %>%
+  filter(tourney_date < 20121105) %>%
+  filter(round == "F")
+
+winners2011 <- atp2011 %>%
+  filter(tourney_date < 20111114) %>%
+  filter(round == "F")
+
+winners2010 <- atp2010 %>%
+  filter(tourney_date < 20101121) %>%
+  filter(round == "F")
 ```
 
 
